all working until edit in date and some fields

--- a/src/components/AddTodo.css
+++ b/src/components/AddTodo.css
@@ -2,7 +2,22 @@
 .addTodo-th,
 .addTodo-td {
   border: 1px solid;
-  padding: 20px;
+  padding: 5px;
+}
+
+.addTodo-td {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.addTodo-table tr {
+  display: flex;
+  justify-content: center;
+}
+
+.addTodo-table {
+  width: 90%;
 }
 
 td {
@@ -14,12 +29,15 @@ td {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 .addTodo-submit {
   width: 50%;
   text-align: center;
   height: 30px;
   border-radius: 30px;
+  margin-top: 8px;
+  background-color: rgb(219, 235, 36);
 }
 .addTodo-submit:hover {
   background-color: #3cbc8d;
@@ -30,23 +48,23 @@ td {
   background-color: #3cbc8d;
   color: white;
   padding: 16px 20px;
-  border-radius: 30px;
-  width: 80%;
+  border-radius: 40px;
+  width: 100%;
 }
-select {
-  width: 80%;
+.addtodo-select {
+  width: 100%;
   padding: 16px 20px;
   border: none;
-  border-radius: 4px;
+  border-radius: 40px;
 
   background-color: #3cbc8d;
   color: white;
 }
 #inputDate {
-  width: 80%;
+  width: 100%;
   padding: 16px 20px;
   border: none;
-  border-radius: 4px;
+  border-radius: 40px;
 
   background-color: #3cbc8d;
   color: white;
