--- a/src/components/TodoList.css
+++ b/src/components/TodoList.css
@@ -1,23 +1,17 @@
 .todoList-content {
-  overflow-x: auto;
-}
-.todoList-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  width: 100%;
-  border: 1px solid #ddd;
+  border: 1px solid black;
   overflow-x: auto;
 }
 
-.todoList-table th {
-  text-align: center;
-  padding: 8px;
+.todoList-table {
   border: 1px solid black;
 }
+
+.todoList-table th,
 .todoList-table td {
-  text-align: center;
-  padding: 8px;
   border: 1px solid black;
+  padding: 5px;
+  width: 20%;
 }
 
 .todoList-deleteButton {
@@ -25,8 +19,20 @@
   text-align: center;
   height: 30px;
   border-radius: 30px;
+  background-color: #f33636;
 }
 .todoList-deleteButton:hover {
+  background-color: #3cbc8d;
+  color: white;
+}
+
+.todoList-table select {
+  width: 90%;
+
+  padding: 16px 20px;
+  border: none;
+  border-radius: 40px;
+
   background-color: #3cbc8d;
   color: white;
 }
